# fastapi-user-crud

./: README.md  database.db  pyproject.toml
src/: db.py  main.py
src/users/: models.py  routes.py  services.py
